Corrección bug al aprobar horas.

--- a/webMetics/Views/Asesor/ListaAsesores.cshtml
+++ b/webMetics/Views/Asesor/ListaAsesores.cshtml
@@ -64,7 +64,7 @@
                             <th scope="col">Nombre</th>
                             <th scope="col">Primer<br>Apellido</th>
                             <th scope="col">Segundo<br>Apellido</th>
-                            <th scope="col">Correo institucional</th>
+                            <th scope="col">Correo Institucional</th>
                             <th scope="col">Descripción</th>
                             <th scope="col" style="width:10%;">Teléfono</th>
                             <th class="text-center" scope="col" style="width:3.33%;"></th>
