--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -79,11 +79,11 @@
                 <table class="table table-striped" id="tblCustomers">
                     <thead>
                         <tr>
-                            <th scope="col">Unidad académica</th>
+                            <th scope="col">Unidad Académica</th>
                             <th scope="col">Nombre</th>
                             <th scope="col">Primer<br>Apellido</th>
                             <th scope="col">Segundo<br>Apellido</th>
-                            <th scope="col">Correo institucional</th>
+                            <th scope="col">Correo Institucional</th>
                             <th class="text-center" scope="col" style="width: 10%">Horas<br>Matriculadas</th>
                             <th class="text-center" scope="col" style="width: 10%">Horas<br>Aprobadas</th>
                             <th class="text-center" scope="col" style="width:3.33%;"></th>
