--- a/webMetics/Views/Participante/ListaParticipantes.cshtml
+++ b/webMetics/Views/Participante/ListaParticipantes.cshtml
@@ -52,7 +52,7 @@
             }
             else
             {
-                <div class="d-flex justify-content-between">
+                <div class="d-flex justify-content-between mb-4">
                     <div>
                         @using (Html.BeginForm("VerCalificaciones", "Calificaciones", new { idGrupo = ViewBag.IdGrupo }, FormMethod.Post))
                         {
@@ -67,51 +67,30 @@
                     </div>
 
                     <div class="d-flex justify-content-end">
-                        <span class="mx-1">
-                            @using (Html.BeginForm("ExportarParticipantesPDF", "Inscripcion", new { idGrupo = ViewBag.IdGrupo }, FormMethod.Post))
-                            {
-                                @Html.AntiForgeryToken()
-                                <button type="submit" id="btnSubmit" class="btn btn-primary" value="Export">
-                                    <i class="bi bi-download me-1"></i>
-                                    PDF
-                                </button>
-                            }
-                        </span>
-                        <span class="mx-1">
-                            @using (Html.BeginForm("ExportarParticipantesExcel", "Inscripcion", new { idGrupo = ViewBag.IdGrupo }, FormMethod.Post))
-                            {
-                                @Html.AntiForgeryToken()
-                                <button type="submit" id="btnSubmit" class="btn btn-primary" value="Export">
-                                    <i class="bi bi-download me-1"></i>
-                                    Excel
-                                </button>
-                            }
-                        </span>
-                        <span class="mx-1">
-                            @using (Html.BeginForm("ExportarParticipantesWord", "Inscripcion", new { idGrupo = ViewBag.IdGrupo }, FormMethod.Post))
-                            {
-                                @Html.AntiForgeryToken()
-                                <button type="submit" id="btnSubmit" class="btn btn-primary" value="Export">
-                                    <i class="bi bi-download me-1"></i>
-                                    Word
-                                </button>
-                            }
-                        </span>
+                        <div class="mx-1">
+                            @Html.ActionLink("   PDF", "ExportarParticipantesPDF", "Inscripcion", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                        </div>
+                        <div class="mx-1">
+                            @Html.ActionLink("   Excel", "ExportarParticipantesExcel", "Inscripcion", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                        </div>
+                        <div class="mx-1">
+                            @Html.ActionLink("   Word", "ExportarParticipantesWord", "Inscripcion", new { idGrupo = ViewBag.IdGrupo }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                        </div>
                     </div>
                 </div>
 
                 <table class="table table-striped" id="tblCustomers">
                     <thead>
                         <tr>
-                            <th scope="col">Unidad académica</th>
+                            <th scope="col">Unidad Académica</th>
                             <th scope="col">Nombre</th>
-                            <th scope="col">Primer Apellido</th>
-                            <th scope="col">Segundo Apellido</th>
-                            <th scope="col">Correo institucional</th>
-                            <th scope="col" style="width:5%"></th>
+                            <th scope="col">Primer<br>Apellido</th>
+                            <th scope="col">Segundo<br>Apellido</th>
+                            <th scope="col">Correo Institucional</th>
+                            <th scope="col" style="width:3.33%"></th>
                             @if (ViewBag.Role == 1)
                             {
-                                <th scope="col" style="width:5%"></th>
+                                <th scope="col" style="width:3.33%"></th>
                             }
                         </tr>
                     </thead>
@@ -132,14 +111,14 @@
                                 <td>@participante.segundoApellido</td>
                                 <td>@participante.correo</td>
                                 <td>
-                                    @Html.ActionLink(" ", "VerDatosParticipante", "Participante", new { idParticipante = participante.idParticipante }, new { @class = "btn btn-primary bi bi-search" })
+                                    @Html.ActionLink(" ", "VerDatosParticipante", "Participante", new { idParticipante = participante.idParticipante }, new { @class = "text-secondary bi bi-search" })
                                 </td>
                                 @if (ViewBag.Role == 1)
                                 {
-                                    <td class=" ">
-                                        <button type="button" class="btn btn-outline-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModal('@participante.idParticipante', '@ViewBag.IdGrupo')">
+                                    <td>
+                                        <a href="#" class="text-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar" onclick="actualizarModalEliminar('@participante.idParticipante', '@ViewBag.IdGrupo')">
                                             <i class="bi bi-trash"></i>
-                                        </button>
+                                        </a>
                                     </td>
                                 }
                             </tr>
@@ -148,7 +127,7 @@
                 </table>
             }
             <div class="d-flex justify-content-center my-4">
-                <a asp-action="ListaGruposDisponibles" asp-controller="Grupo" class="btn btn-primary">Regresar</a>
+                <a href="#" class="btn btn-primary btn-block" onclick="history.go(-1); return false;">Regresar</a>
             </div>
         </div>
     </div>
@@ -171,7 +150,7 @@
                     <div class="modal-footer">
                         <input type="hidden" id="idParticipante" name="idParticipante">
                         <input type="hidden" id="idGrupo" name="idGrupo">
-                        <input type="submit" class="btn btn-primary" value="Aceptar" onclick="" />
+                        <input type="submit" class="btn btn-danger" value="Aceptar" onclick="" />
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
 
                     </div>
