--- a/webMetics/Views/Participante/VerDatosParticipante.cshtml
+++ b/webMetics/Views/Participante/VerDatosParticipante.cshtml
@@ -1,45 +1,39 @@
 ﻿@using webMetics.Controllers
 @{
-    ViewBag.Title = "Módulos y horas inscritas";
+    ViewBag.Title = "Módulos y Horas";
 
     var urlReferrer = Context.Request.Headers["Referer"].FirstOrDefault();
 }
 
-<html xmlns="http://www.w3.org/1999/xhtml">
-<body>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.22/pdfmake.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+@if (ViewBag.Role == 1 || ViewBag.Role == 2)
+{
+    <div class="contenedor-tipos-actividades container-fluid">
+        @if (urlReferrer != null)
+        {
+            <div class="d-flex justify-content-start mb-3">
+                <a class="text-dark fs-4" onclick="history.go(-1); return false;" href="#">
+                    <i class="bi bi-arrow-left"></i>
+                </a>
+            </div>
+        }
 
-    @if (ViewBag.Role == 1 || ViewBag.Role == 2)
-    {
-        <div class="contenedor-tipos-actividades container-fluid">
-            @if (urlReferrer != null)
-            {
-                <div class="d-flex justify-content-start mb-3">
-                    <a class="text-dark fs-4" onclick="history.go(-1); return false;" href="#">
-                        <i class="bi bi-arrow-left"></i>
-                    </a>
-                </div>
-            }
+        <h1>@ViewBag.Title</h1>
+        <hr />
 
-            <h1>@ViewBag.Title</h1>
-            <hr />
-
-            @if (ViewBag.ErrorMessage != null)
-            {
-                <div class="alert alert-dark alert-dismissible fade show" role="alert">
-                    @ViewBag.ErrorMessage
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            }
-            @if (ViewBag.SuccessMessage != null)
-            {
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    @ViewBag.SuccessMessage
-                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-            }
+        @if (ViewBag.ErrorMessage != null)
+        {
+            <div class="alert alert-dark alert-dismissible fade show" role="alert">
+                @ViewBag.ErrorMessage
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
+        @if (ViewBag.SuccessMessage != null)
+        {
+            <div class="alert alert-success alert-dismissible fade show" role="alert">
+                @ViewBag.SuccessMessage
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
 
         <div class="table-responsive">
 
@@ -77,7 +71,9 @@
                                 {
                                     foreach (var grupo in ViewBag.ListaGrupos)
                                     {
-                                        <span>@grupo.nombre (Grupo @grupo.idGrupo)</span><br>
+                                        <span>@grupo.nombre (Grupo @grupo.idGrupo)</span>
+
+                                        <br>
                                     }
                                 }
                                 else
@@ -90,7 +86,9 @@
                                 {
                                     foreach (var grupo in ViewBag.ListaGrupos)
                                     {
-                                        <span>@grupo.cantidadHoras</span><br>
+                                        <span>@grupo.cantidadHoras</span>
+
+                                        <br>
                                     }
                                 }
                                 else
@@ -113,25 +111,22 @@
             @using (Html.BeginForm("SubirHorasAprobadas", "Participante", new { idParticipante = ViewBag.Participante.idParticipante }, FormMethod.Post))
             {
                 <div class="d-flex justify-content-end">
-                    <div class="d-flex my-2 bg-light p-3 rounded-1" style="width:33%">
-                        @Html.AntiForgeryToken()
-                        <div class="navbar-text ms-3 me-2"><strong>Aprobar</strong></div>
-                        <div class="input-group">
-                            <input type="number" class="form-control" name="horasAprobadas" id="horasAprobadas">
+                    <div class="bg-light rounded-1 d-flex flex-column">
+                        <div class="d-flex my-2 p-3 align-items-center flex-grow-1">
+                            @Html.AntiForgeryToken()
+                            <div class="navbar-text me-2"><strong>Aprobar</strong></div>
+                            <input type="number" class="form-control flex-grow-1" name="horasAprobadas" id="horasAprobadas">
+                            <div class="navbar-text ms-2"><strong>horas.</strong></div>
                         </div>
-                        <div class="navbar-text ms-2 me-4"><strong>horas.</strong></div>
-                        <div class="align-self-center ms-5"><button type="submit" class="btn btn-info">Aceptar</button></div>
+                        <div class="mx-4 mb-4 align-self-center">
+                            <button type="submit" class="btn btn-outline-primary">Aceptar</button>
+                        </div>
                     </div>
                 </div>
             }
-
-            <hr />
-
             <div class="d-flex justify-content-center my-4">
-                <a href="../Participante/VerParticipantes" class="btn btn-primary">Regresar</a>
+                <a href="#" class="btn btn-primary btn-block" onclick="history.go(-1); return false;">Regresar</a>
             </div>
         </div>
-        </div>
-    }
-</body>
-</html>
+    </div>
+}
