--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -14,14 +14,14 @@
 {
     @if (ViewBag.ErrorMessage != null)
     {
-        <div class="alert alert-dark alert-dismissible fade show mb-4" role="alert">
+        <div class="alert alert-dark alert-dismissible fade show my-4" role="alert">
             @ViewBag.ErrorMessage
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     }
     @if (ViewBag.SuccessMessage != null)
     {
-        <div class="alert alert-success alert-dismissible fade show mb-4" role="alert">
+        <div class="alert alert-success alert-dismissible fade show my-4" role="alert">
             @ViewBag.SuccessMessage
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
