--- a/webMetics/Views/Participante/VerParticipantes.cshtml
+++ b/webMetics/Views/Participante/VerParticipantes.cshtml
@@ -37,45 +37,52 @@
         }
 
         <div class="table-responsive">
+            <div class="d-flex justify-content-between mb-4">
+                <div>
+                    @using (Html.BeginForm("SubirArchivoExcel", "Participante", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <form>
+                            <div class="mb-3 d-flex align-items-center">
+                                <input type="file" class="form-control" name="file" id="file" accept=".xls,.xlsx" required>
+                                <input class="btn btn-secondary ms-2" type="submit" value="Subir archivo">
+                            </div>
+
+                            <div class="mb-4 bg-light p-3 rounded">
+                                <small class="text-muted">
+                                    Subir un archivo en formato <strong>XLS</strong> o <strong>XLSX</strong> con las siguientes columnas:
+                                    <br />
+                                    Unidad Académica, Nombre, Primer Apellido, Segundo Apellido, Correo Institucional, Horas aprobadas
+                                </small>
+                            </div>
+                        </form>
+                    }
+                </div>
+
+                <div class="d-flex justify-content-end">
+                    <!--
+                        <div class="mx-1">
+                    @Html.ActionLink("   PDF", "ExportarParticipantesPDF", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                    </div>
+                    <div class="mx-1">
+                    @Html.ActionLink("   Excel", "ExportarParticipantesExcel", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                    </div>
+                    <div class="mx-1">
+                    @Html.ActionLink("   Word", "ExportarParticipantesWord", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
+                    </div>
+                    -->
+                    <div class="mx-1">
+                        @Html.ActionLink("   Agregar", "FormularioParticipante", "Participante", new { }, new { @class = "btn btn-primary bi bi-person-plus" })
+                    </div>
+                </div>
+            </div>
+
             @if (ViewBag.ListaParticipantes == null)
             {
                 <h5 class="text-center">No hay personas inscritas en ningún módulo.</h5>
             }
             else
             {
-                <div class="d-flex justify-content-between mb-4">
-                    <div>
-                        @using (Html.BeginForm("SubirArchivoExcel", "Participante", FormMethod.Post, new { enctype = "multipart/form-data" }))
-                        {
-                            @Html.AntiForgeryToken()
-                            <form>
-                                <div class="mb-3 d-flex">
-                                    <label for="file"></label>
-                                    <input type="file" class="form-control" name="file" id="file">
-                                    <input class="btn btn-secondary ms-2" type="submit" value="Subir archivo">
-                                </div>
-                            </form>
-                        }
-                    </div>
-
-                    <div class="d-flex justify-content-end">
-                        <!--
-                            <div class="mx-1">
-                        @Html.ActionLink("   PDF", "ExportarParticipantesPDF", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
-                        </div>
-                        <div class="mx-1">
-                        @Html.ActionLink("   Excel", "ExportarParticipantesExcel", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
-                        </div>
-                        <div class="mx-1">
-                        @Html.ActionLink("   Word", "ExportarParticipantesWord", "Participante", new { }, new { @class = "btn btn-outline-secondary bi bi-download" })
-                        </div>
-                        -->
-                        <div class="mx-1">
-                            @Html.ActionLink("   Agregar", "FormularioParticipante", "Participante", new { }, new { @class = "btn btn-primary bi bi-person-plus" })
-                        </div>
-                    </div>
-                </div>
-
                 <table class="table table-striped" id="tblCustomers">
                     <thead>
                         <tr>
