--- a/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
+++ b/webMetics/Views/Grupo/ListaGruposDisponibles.cshtml
@@ -30,7 +30,7 @@
     if (ViewBag.ListaGrupos == null)
     {
         <div class="justify-content-center">
-            <h2 class="text-center">No hay módulos disponibles en este momento.</h2>
+            <h2 class="text-center mt-4">No hay módulos disponibles en este momento.</h2>
             <br />
             <div style="text-align:center; align-items:center">
                 @if (ViewBag.Role == 1 || ViewBag.Role == 2)
