--- a/webMetics/Views/Grupo/CrearGrupo.cshtml
+++ b/webMetics/Views/Grupo/CrearGrupo.cshtml
@@ -98,7 +98,7 @@
                         <div class="row mt-3">
                             <h4>Fechas de inscripción</h4>
                             <div class="col">
-                                @Html.LabelFor(grupoModel => grupoModel.fechaInicioInscripcion) <a style="color:red;font-size:22px">*</a>
+                                @Html.LabelFor(grupoModel => grupoModel.fechaInicioInscripcion)
                                 <br />
                                 @Html.EditorFor(grupoModel => grupoModel.fechaInicioInscripcion, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(grupoModel => grupoModel.fechaInicioInscripcion, "", new { @class = "text-danger" })
@@ -115,13 +115,13 @@
                         <div class="row mt-3">
                             <h4>Fecha de inicio y fin del grupo</h4>
                             <div class="col">
-                                @Html.LabelFor(grupoModel => grupoModel.fechaInicioGrupo) <a style="color:red;font-size:22px">*</a>
+                                @Html.LabelFor(grupoModel => grupoModel.fechaInicioGrupo)
                                 <br />
                                 @Html.EditorFor(grupoModel => grupoModel.fechaInicioGrupo, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(grupoModel => grupoModel.fechaInicioGrupo, "", new { @class = "text-danger" })
                             </div>
                             <div class="col">
-                                @Html.LabelFor(grupoModel => grupoModel.fechaFinalizacionGrupo) <a style="color:red;font-size:22px">*</a>
+                                @Html.LabelFor(grupoModel => grupoModel.fechaFinalizacionGrupo)
                                 <br />
                                 @Html.EditorFor(grupoModel => grupoModel.fechaFinalizacionGrupo, new { htmlAttributes = new { @class = "form-control" } })
                                 @Html.ValidationMessageFor(grupoModel => grupoModel.fechaFinalizacionGrupo, "", new { @class = "text-danger" })
