--- a/webMetics/Views/Grupo/EditarGrupo.cshtml
+++ b/webMetics/Views/Grupo/EditarGrupo.cshtml
@@ -90,13 +90,13 @@
                         </div>
                         <div class="form-group mt-1">
                             @Html.LabelFor(grupoModel => grupoModel.temaAsociado, new { Style = "font-size:22px" }) <a style="color:red;font-size:22px">*</a>
-                            @Html.DropDownList("temaAsociado", ViewData["Temas"] as List<SelectListItem>, "Seleccione un tema...", new { @class = "form-select" })
+                            @Html.DropDownListFor(grupoModel => grupoModel.temaAsociado, ViewData["Temas"] as List<SelectListItem>, "Seleccione un tema...", new { @class = "form-select" })
                             @Html.ValidationMessageFor(grupoModel => grupoModel.temaAsociado, "", new { @class = "text-danger" })
                         </div>
 
                         <div class="form-group mt-1">
                             @Html.LabelFor(grupoModel => grupoModel.nombreAsesorAsociado, new { Style = "font-size:22px" })
-                            @Html.DropDownList("asesorPrincipal", ViewData["Asesores"] as List<SelectListItem>, "Seleccione una opción...", new { @class = "form-select" })
+                            @Html.DropDownListFor(grupoModel => grupoModel.nombreAsesorAsociado, ViewData["Asesores"] as List<SelectListItem>, "Seleccione una opción...", new { @class = "form-select" })
                             @Html.ValidationMessageFor(grupoModel => grupoModel.nombreAsesorAsociado, "", new { @class = "text-danger" })
                         </div>
 
